# mqlfiddle

./: .dockerignore  .drone.yml  Dockerfile  README.md
environments/: staging.yaml
mqlfiddle-api/: Cargo.toml  Dockerfile
mqlfiddle-api/src/: main.rs
mqlfiddle-fe/: package.json  tailwind.config.js
mqlfiddle-fe/public/: index.html  manifest.json
mqlfiddle-fe/src/: App.css  App.tsx  index.css
mqlfiddle-fe/src/components/ActionMenu/: index.tsx
mqlfiddle-fe/src/components/Editor/: index.tsx
mqlfiddle-fe/src/components/Layout/: Navbar.tsx  index.tsx  style.css
mqlfiddle-fe/src/components/LoadDialog/: index.tsx
mqlfiddle-fe/src/components/MQLEditor/: index.tsx
mqlfiddle-fe/src/components/Output/: index.tsx
mqlfiddle-fe/src/components/SaveFiddleModal/: index.tsx
mqlfiddle-fe/src/components/SavedFiddleToggle/: index.tsx
mqlfiddle-fe/src/components/SchemaEditor/: index.tsx
mqlfiddle-fe/src/components/ThemeToggle/: index.tsx
mqlfiddle-fe/src/components/Toast/: index.tsx
mqlfiddle-fe/src/components/VersionToggle/: index.tsx
mqlfiddle-fe/src/constants/: index.ts  querySyntax.ts  versions.ts
mqlfiddle-fe/src/context/: themeContext.tsx
mqlfiddle-fe/src/helpers/: suggestions.ts
mqlfiddle-fe/src/hooks/: useTheme.tsx  useToast.tsx
mqlfiddle-fe/src/types/: index.ts
