[package]
name = "mqlfiddle-api"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
actix-web = "3"
env_logger = "0.8.3"
mongodb = "1"
bson = "1"
futures = "0.3"
rand = "0.8.3"
rust-crypto = "0.2.36"
